--- a/Cornyn_NRA.html
+++ b/Cornyn_NRA.html
@@ -53,7 +53,7 @@ $(function () {
         yAxis: {
             min: 0,
             title: {
-                text: 'Total money spent on Cornyn by top two gun rights PACs',
+                text: '<br>Total money spent on Cornyn by top two gun rights PACs',
                 style: {
                     fontSize:'1.0rem'
                 }
