--- a/Manchin_NRA.html
+++ b/Manchin_NRA.html
@@ -62,7 +62,7 @@ $(function () {
         yAxis: {
             min: 0,
             title: {
-                text: 'Total money spent on Manchin by top two gun rights PACs',
+                text: '<br>Total money spent on Manchin by top two gun rights PACs',
                 style: {
                     fontSize: '1.0rem',
                 },
