--- a/Gun_related_deaths_stacked.html
+++ b/Gun_related_deaths_stacked.html
@@ -29,7 +29,7 @@ $(function () {
         },
         yAxis: {
             title: {
-                text: 'Millions'
+                text: 'Number of deaths'
             },
             labels: {
                 formatter: function () {
