--- a/Gun_related_deaths_stacked.html
+++ b/Gun_related_deaths_stacked.html
@@ -14,6 +14,12 @@ $(function () {
         chart: {
             type: 'area'
         },
+        exporting: {
+            enabled: false
+        },
+        credits: {
+            enabled: false
+        },
         title: {
             text: 'Number of Gun-Related Deaths in the United States, Yearly'
         },
@@ -29,7 +35,7 @@ $(function () {
         },
         yAxis: {
             title: {
-                text: 'Number of deaths'
+                text: 'Number of deaths per million population'
             },
             labels: {
                 formatter: function () {
@@ -39,7 +45,9 @@ $(function () {
         },
         tooltip: {
             shared: true,
-            valueSuffix: ''
+            valueSuffix: '',
+            headerFormat:'<span style="font-size: 10px">{point.key}</span><br/>' + '<span></span> Total: <b>{point.total}</b><br/>',
+
         },
         plotOptions: {
             area: {
@@ -54,19 +62,19 @@ $(function () {
         },
         series: [{
             name: 'Unintentional',
-            data: [2.952979735918391, 2.737967614966219, 2.8143416534618657, 2.649281142768325, 2.516304854028242, 3.3660900749729397, 2.669900786182234, 2.151619375770846, 2.0349817208679846, 1.9467666780339865, 1.8059042239216403, 1.9627814022044265, 1.8967685239280592, 1.7459252756407406, 1.5974499561553763]
+            data: [2.95, 2.74, 2.81, 2.65, 2.52, 2.22, 2.67, 2.15, 2.03, 1.95, 1.81, 1.96, 1.9, 1.75, 1.6]
         }, {
             name: 'Homicide',
-            data: [38.804447306461576, 38.10926315625017, 39.821881650230985, 41.1264391572264, 41.088155972625536, 60.28879974034738, 41.79799050814063, 42.868167344992045, 41.93456622839213, 40.0501205604323, 37.46436325908197, 35.8806804845225, 35.52188497941753, 37.027634221709285, 35.45389922492962]
+            data: [38.8, 38.11, 39.82, 41.13, 41.09, 39.7, 41.8, 42.87, 41.93, 40.05, 37.46, 35.88, 35.52, 37.03, 35.45]
         }, {
             name: 'Legal Intervention',
-            data: [1.0715302682519403, 0.9526433711867001, 1.1334568005837689, 1.0430240719560333, 1.196106553901096, 1.6130262146634582, 1.1166885417492234, 1.2065155378154278, 1.165217918474164, 1.072037055809256, 1.08549838730308, 1.114186142505483, 1.457077681663856, 1.5006036584430453, 1.477245801038734]
+            data: [1.07, 0.95, 1.13, 1.04, 1.2, 1.06, 1.12, 1.21, 1.17, 1.07, 1.09, 1.11, 1.46, 1.5, 1.48]
         }, {
             name: 'Suicide',
-            data: [59.48605659770555, 58.52052946112076, 59.19592188559628, 59.480186076746065, 58.27830981788423, 86.8752060952184, 57.53314723278877, 56.58222729149407, 57.60359350815867, 59.92555603684685, 61.071508366736346, 62.80900487054165, 64.15634990409797, 65.84177325983859, 66.98218380512888]
+            data: [59.49, 58.52, 59.2, 59.48, 58.28, 57.21, 57.53, 56.58, 57.6, 59.93, 61.07, 62.81, 64.16, 65.84, 66.98]
         }, {
             name: 'Undetermined Intent',
-            data: [1.1611231000455808, 0.8115110198997816, 0.8106146158973703, 0.8448494982843872, 0.7997023645678796, 1.2188461750672432, 0.7478429325047828, 0.7373150508872058, 0.9162397307660092, 0.8977488228095917, 0.7562631407036472, 0.8162061276493654, 0.795936707164397, 0.8156147273066234, 0.8888780944151697]
+            data: [1.16, 0.81, 0.81, 0.84, 0.8, 0.8, 0.75, 0.74, 0.92, 0.9, 0.76, 0.82, 0.8, 0.82, 0.89]
         }]
     });
 });
