--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
   <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=0&height=650' width='100%' height='650' frameborder='0'></iframe>
 </div>
 <p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. According to multiple media reports, gun-related deaths could outnumber deaths by car accidents this year.</p>
-<iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
+<iframe src="Gun_related_deaths_stacked.html" frameBorder="0"></iframe>
 <p>The number of gun-related deaths has increased over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33,636.</p>
 <p> These numbers have drummed up widespread support for amendments like Feinstein and Manchin and Toomey's, including bipartisan public support.</p>
 <p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, creating federal database for gun sales and banning assault-style weapons, according to Pew Research.</p>
