--- a/Gun_related_deaths_stacked.html
+++ b/Gun_related_deaths_stacked.html
@@ -11,7 +11,8 @@
 <script>
 $(function () {
     $('#container').highcharts({
-        chart: {
+        colors: ['#e6e6e6', '#b3b3b3','#808080','#404040','#000'],
+		chart: {
             type: 'area'
         },
         exporting: {
@@ -60,19 +61,22 @@ $(function () {
                 }
             }
         },
-        series: [{
-            name: 'Unintentional',
-            data: [2.95, 2.74, 2.81, 2.65, 2.52, 2.22, 2.67, 2.15, 2.03, 1.95, 1.81, 1.96, 1.9, 1.75, 1.6]
-        }, {
-            name: 'Homicide',
-            data: [38.8, 38.11, 39.82, 41.13, 41.09, 39.7, 41.8, 42.87, 41.93, 40.05, 37.46, 35.88, 35.52, 37.03, 35.45]
-        }, {
-            name: 'Legal Intervention',
-            data: [1.07, 0.95, 1.13, 1.04, 1.2, 1.06, 1.12, 1.21, 1.17, 1.07, 1.09, 1.11, 1.46, 1.5, 1.48]
-        }, {
+        series: [ 
+		{
             name: 'Suicide',
             data: [59.49, 58.52, 59.2, 59.48, 58.28, 57.21, 57.53, 56.58, 57.6, 59.93, 61.07, 62.81, 64.16, 65.84, 66.98]
         }, {
+            name: 'Homicide',
+            data: [38.8, 38.11, 39.82, 41.13, 41.09, 39.7, 41.8, 42.87, 41.93, 40.05, 37.46, 35.88, 35.52, 37.03, 35.45]
+        }, 
+		{
+            name: 'Unintentional',
+            data: [2.95, 2.74, 2.81, 2.65, 2.52, 2.22, 2.67, 2.15, 2.03, 1.95, 1.81, 1.96, 1.9, 1.75, 1.6]
+        },
+		{
+            name: 'Legal Intervention',
+            data: [1.07, 0.95, 1.13, 1.04, 1.2, 1.06, 1.12, 1.21, 1.17, 1.07, 1.09, 1.11, 1.46, 1.5, 1.48]
+        },{
             name: 'Undetermined Intent',
             data: [1.16, 0.81, 0.81, 0.84, 0.8, 0.8, 0.75, 0.74, 0.92, 0.9, 0.76, 0.82, 0.8, 0.82, 0.89]
         }]
