--- a/bipartisanSupport.html
+++ b/bipartisanSupport.html
@@ -34,13 +34,13 @@ $(function () {
                 }
         },
         xAxis: {
-            categories: ['Background checks', 'Prevent mentally ill from buying', 'Federal database to track gun sales', 'Ban on assault-style weapons'],
+            categories: ['Background checks', 'Prevent mentally ill from buying', 'Gun sale federal database', 'Ban on assault-style weapons'],
             title: {
                 text: null
             },
 			labels: {
                 style: {
-                    fontSize:'1.1rem'
+                    fontSize:'1.8vw'
                 },
             },
 
