--- a/main.html
+++ b/main.html
@@ -32,6 +32,7 @@
 </div>
 <p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. According to multiple media reports, gun-related deaths could outnumber deaths by car accidents this year.</p>
 <iframe src="Gun_related_deaths_stacked.html" frameBorder="0"></iframe>
+<h5>Click on legend to view trends in types of gun-related deaths.</h5>
 <p>The number of gun-related deaths has increased over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33,636.</p>
 <p> These numbers have drummed up widespread support for amendments like Feinstein and Manchin and Toomey's, including bipartisan public support.</p>
 <p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, creating federal database for gun sales and banning assault-style weapons, according to Pew Research.</p>
@@ -43,7 +44,7 @@
 <blockquote>"Those who choose to do the NRA's bidding will be held accountable by our constituents. ... Something has to be done. We must take a stand. The American people are desperately looking for help, some help, any help." <br><em>- Senate Minority Leader Harry Reid </em></blockquote>
 <p>Reid's statement implies the NRA is controlling the voting outcomes on gun-control legislation. The NRA spends millions of dollars each year on gun rights lobbying. Its contributions to campaigns extend past direct financial contributions and include individual campaigning, as well. It creates TV and radio ads to support candidates with high ratings on their gun-rights scale and condemn candidates that do not fall in line with their Second Amendment political views. It gives the majority of its funds to Republican candidates, according to OpenSecrets.org.</p>
 <iframe src="NRASpending.html" frameBorder="0"></iframe>
-<h5><strong>Click on bars for breakdown of spending.</h5>
+<h5>Click on bars for breakdown of spending.</h5>
 <em><strong><h6>Independent Expenditures:</strong> Money spent independent from a politician's official campaign to support or oppose a candidate <br> <strong>Contributions to Committees:</strong> Committees are organized campaign efforts for politicians</h6></em>
 <p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart gun reform in Congress. "We can respect the Second Amendment while keeping an irresponsible, law-breaking few from inflicting harm on a massive scale," Obama said in a speech after the Sandy Hook Elementary School mass shooting. One of his promises were universal background checks for those who wish to own a gun. Manchin and Toomey delivered an amendment to the Senate, honoring Obama's commitment, but failed to wrangle the 60 votes the amendment required to pass.</p>
 <div class="blockquote2">Manchin-Toomey Gun Control Amendment 2013 Vote <strong><br> Yes: <span class="voteNumber">54</span></strong> <br> <strong> No: <span class="voteNumber">46</span> <br></strong> 60 votes were needed to pass the amendment</div>
