--- a/main.html
+++ b/main.html
@@ -30,12 +30,12 @@
 <div class="timeline">
   <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=0&height=650' width='100%' height='650' frameborder='0'></iframe>
 </div>
-<p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. According to multiple media reports, gun-related deaths could outnumber deaths by car accidents this year.</p>
+<p>But beyond mass shootings, the day-to-day individual gun-related deaths increased between 2011 and 2012 and dipped slightly between 2012 and 2013. While total gun-related deaths has seemed to ebb and flow between 1999 and 2013, suicides and gun-related deaths from legal intervention, or police shootings, have increased.</p>
 <iframe src="Gun_related_deaths_stacked.html" frameBorder="0"></iframe>
 <h5>Click on legend to view trends in types of gun-related deaths.</h5>
-<p>The number of gun-related deaths has increased over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33,636.</p>
-<p> These numbers have drummed up widespread support for amendments like Feinstein and Manchin and Toomey's, including bipartisan public support.</p>
+<p> Some of these stats, coupled with the media's coverage of mass shootings, have drummed up widespread support for amendments like Feinstein and Manchin and Toomey's, including bipartisan public support.</p>
 <p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, creating federal database for gun sales and banning assault-style weapons, according to Pew Research.</p>
+<p>Republicans seem to strongly support restrictions to guns for the mentally ill, while suicide deaths by gun have been increasing since 2006.</p>
 <iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
 </div>
 <div class="banner2"></div>
@@ -60,7 +60,7 @@
 <div id="content">
 <p>Sen. John Cornyn, as whip, was one of the strongest voices of the opposition to the bills presented the first week in December. He failed to receive any direct support from the NRA or SCI in the 2012 election cycle but received much larger direct contributions after he voted against Manchin and Toomey's amendment.</p>
 <iframe src="Cornyn_NRA.html" frameBorder="0"></iframe>
-<p>While Congress refuses to move on background checks and reform, the public grows increasingly concerned for its safety. On Sunday night, the president gave an address to a nation concerned about terrorism on American soil. He attempted to quell the public's fears, but Reid insists the American people want more than assurances, as mass shootings soar; they want a representative body of legislators; they want change.</p>
+<p>While Congress refuses to move on background checks and reform, the public grows increasingly concerned for its safety. On Sunday night, the president gave an address to a nation concerned about terrorism on American soil. He attempted to quell the public's fears by once again promoting a gun control agenda. But Reid insists the American people want more than assurances, as mass shootings soar; they want a representative body of legislators; they want change.</p>
 </div>
 </body>
 </html>
