--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 <iframe src="Gun_related_deaths_stacked.html" frameBorder="0"></iframe>
 <h5>Click on legend to view trends in types of gun-related deaths.</h5>
 <p> Some of these stats, coupled with the media's coverage of mass shootings, have drummed up widespread support for amendments like Feinstein and Manchin and Toomey's, including bipartisan public support.</p>
-<p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, creating federal database for gun sales and banning assault-style weapons, according to Pew Research.</p>
+<p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, creating federal database for gun sales and banning assault-style weapons, according to the Pew Research Center.</p>
 <p>Republicans seem to strongly support restrictions to guns for the mentally ill, while suicide deaths by gun have been increasing since 2006.</p>
 <iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
 </div>
